--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,4 @@ build-backend = "poetry.core.masonry.api"
 test = "poetry run pytest -v"
 run = "poetry run python app/main.py"
 kill = "for /f \"tokens=5\" %a in ('netstat -ano ^| findstr :8000') do taskkill /F /PID %a"
+doc = "mkdocs serve"
